// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormGrid.Item should render FormGrid.Item 1`] = `
<div
  className="form-grid_item column small-6"
>
  ABC
</div>
`;

exports[`FormGrid.Item should render small FormGrid.Item 1`] = `
<div
  className="form-grid_item column small-3"
>
  ABC
</div>
`;
